--- a/app/globals.css
+++ b/app/globals.css
@@ -3,26 +3,26 @@
 @tailwind utilities;
 
 .active:hover {
- color: #ffd700;
+  color: rgb(56, 189, 248);
 }
 
-.active-on{
- color: #ffd700;
+.active-on {
+  color: rgb(56, 189, 248);
 }
 
 .slick-dots li button::before {
-	font-family: 'slick';
-	font-size: 6px;
-	line-height: 20px;
-	position: absolute;
-	top: 0;
-	left: 0;
-	width: 20px;
-	height: 20px;
-	content: '•';
-	text-align: center;
-	opacity: .25;
-	color: white !important;
-	-webkit-font-smoothing: antialiased;
-	-moz-osx-font-smoothing: grayscale;
+  font-family: 'slick';
+  font-size: 6px;
+  line-height: 20px;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 20px;
+  height: 20px;
+  content: '•';
+  text-align: center;
+  opacity: 0.25;
+  color: rgb(148, 163, 184) !important;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
 }
