--- a/app/globals.css
+++ b/app/globals.css
@@ -2,6 +2,29 @@
 @tailwind components;
 @tailwind utilities;
 
+/* width */
+.scrollbar::-webkit-scrollbar {
+    width: 8px;
+    height: 8px;
+}
+ 
+/* Track */
+.scrollbar::-webkit-scrollbar-track {
+    border-radius: 5px;
+}
+ 
+/* Handle */
+.scrollbar::-webkit-scrollbar-thumb {
+    background-color: gray;
+    
+    border-radius: 5px;
+}
+ 
+/* Handle on hover */
+.scrollbar::-webkit-scrollbar-thumb:hover {
+    background: #555;
+}
+
 .slick-dots li button::before {
   font-family: 'slick';
   font-size: 6px;
