Updated layout, navigation, and styling across multiple components

--- a/app/globals.css
+++ b/app/globals.css
@@ -2,6 +2,12 @@
 @tailwind components;
 @tailwind utilities;
 
+@layer components {
+  .bg-accent {
+    @apply bg-white bg-gradient-to-r from-sky-50/60 to-green-50/40;
+  }
+}
+
 .slick-dots li button::before {
   font-family: 'slick';
   font-size: 6px;
@@ -85,4 +91,3 @@
     left: -18px !important;
   }
 }
-
